--- a/index.html
+++ b/index.html
@@ -4,26 +4,57 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bolarinwa Ifeoluwanimi | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       max-width: 800px;
       margin: auto;
       padding: 2rem;
       line-height: 1.6;
     }
     h1, h2 {
-      color: #1e90ff;
+      color: #007acc;
     }
     ul {
       padding-left: 1.2rem;
     }
+    .profile {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .profile img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    .socials a {
+      margin-right: 1rem;
+      text-decoration: none;
+      color: #333;
+      font-weight: 500;
+    }
+    .socials a:hover {
+      color: #007acc;
+    }
   </style>
 </head>
 <body>
-  <h1>Bolarinwa Ifeoluwanimi</h1>
-  <p><strong>📧</strong> ifeoluwanimibolarinwa@gmail.com<br/>
-     <strong>📞</strong> +234 808 193 4293</p>
+  <div class="profile">
+    <img src="profile.jpg" alt="Profile Photo">
+    <div>
+      <h1>Bolarinwa Ifeoluwanimi</h1>
+      <div class="socials">
+        <a href="mailto:ifeoluwanimibolarinwa@gmail.com">📧 Email</a>
+        <a href="tel:+2348081934293">📞 Call</a>
+        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">🔗 LinkedIn</a>
+        <a href="https://github.com/Nimi-27" target="_blank">🐙 GitHub</a>
+      </div>
+    </div>
+  </div>
 
   <h2>Education</h2>
   <p><strong>University of Ibadan</strong> (Feb 2025)<br/>
@@ -53,3 +84,4 @@
   </ul>
 </body>
 </html>
+
