Initial portfolio page with full content and design
Created responsive layout, added social links and experiences

--- a/index.html
+++ b/index.html
@@ -8,80 +8,56 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       padding: 2rem;
-      line-height: 1.6;
+      line-height: 1.8;
+      color: #333;
     }
     h1, h2 {
       color: #007acc;
+      margin-top: 2rem;
     }
     ul {
       padding-left: 1.2rem;
+    }
+    li {
+      margin-bottom: 0.5rem;
     }
     .profile {
       display: flex;
       align-items: center;
       gap: 1rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
     }
     .profile img {
       width: 120px;
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
+      border: 2px solid #007acc;
     }
     .socials a {
       margin-right: 1rem;
       text-decoration: none;
-      color: #333;
+      color: #007acc;
       font-weight: 500;
     }
     .socials a:hover {
-      color: #007acc;
+      text-decoration: underline;
+    }
+    .section {
+      margin-bottom: 2rem;
     }
   </style>
 </head>
 <body>
+
   <div class="profile">
     <img src="profile.jpg" alt="Profile Photo">
     <div>
-      <h1>Bolarinwa Ifeoluwanimi</h1>
+      <h1>Bolarinwa Ifeoluwanimi A.</h1>
       <div class="socials">
-        <a href="mailto:ifeoluwanimibolarinwa@gmail.com">📧 Email</a>
-        <a href="tel:+2348081934293">📞 Call</a>
-        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">🔗 LinkedIn</a>
-        <a href="https://github.com/Nimi-27" target="_blank">🐙 GitHub</a>
-      </div>
-    </div>
-  </div>
+        <a href="mailto:ifeoluwanimibolarinwa
 
-  <h2>Education</h2>
-  <p><strong>University of Ibadan</strong> (Feb 2025)<br/>
-     B.Sc. Human Nutrition and Dietetics — GPA: 3.02</p>
-  <p><strong>Advanced Breed Comprehensive College</strong> (June 2018)<br/>
-     WASSCE</p>
-
-  <h2>Leadership Experience</h2>
-  <ul>
-    <li>Social Director, Human Nutrition Dept. (2023–2024)</li>
-    <li>Volunteer Leader, SHRIN Medical Outreach (2024)</li>
-    <li>Study Coordinator, Diet & Lipid Profile Study (2024–2025)</li>
-  </ul>
-
-  <h2>Work Experience</h2>
-  <ul>
-    <li>Teaching Assistant, Daycare (2018–2021)</li>
-    <li>Script Marker, WAEC (2019)</li>
-    <li>Freelance Writer, Health & Nutrition Topics (2025–present)</li>
-  </ul>
-
-  <h2>Skills</h2>
-  <ul>
-    <li>Microsoft Office & PowerPoint</li>
-    <li>Intermediate in SPSS</li>
-    <li>Fluent in English</li>
-  </ul>
-</body>
-</html>
 
