Initial portfolio page with full content, design and socials
Created responsive layout, added social links and experiences

--- a/index.html
+++ b/index.html
@@ -58,6 +58,88 @@
     <div>
       <h1>Bolarinwa Ifeoluwanimi A.</h1>
       <div class="socials">
-        <a href="mailto:ifeoluwanimibolarinwa
+        <a href="mailto:ifeoluwanimibolarinwa@gmail.com">📧 Email</a>
+        <a href="tel:+2348081934293">📞 Call</a>
+        <a href="https://www.linkedin.com/in/www.linkedin.com/in/ifeoluwanimi-bolarinwa-65541b229" target="_blank">🔗 LinkedIn</a>
+        <a href="https://github.com/Nimi-27" target="_blank">🐙 GitHub</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Education</h2>
+    <ul>
+      <li><strong>University of Ibadan, Nigeria (Feb 2025)</strong><br>
+        B.Sc. Human Nutrition and Dietetics — GPA: 3.02<br>
+        <em>Relevant Courses:</em> English, Biochemistry, Nutrition, Anatomy & Physiology
+      </li>
+      <li><strong>Advanced Breed Comprehensive College, Sagamu, Ogun State (June 2018)</strong><br>
+        West African Secondary School Certificate Examination
+      </li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Leadership Experience</h2>
+    <ul>
+      <li><strong>Social Director</strong>, Human Nutrition Dept. (Sept 2023–April 2024)
+        <ul>
+          <li>Planned and coordinated departmental social events</li>
+          <li>Managed student engagement and entertainment logistics</li>
+        </ul>
+      </li>
+      <li><strong>Volunteer Leader</strong>, SHRIN Medical Outreach (Dec 2024)
+        <ul>
+          <li>Led nutrition assessments during rural outreach</li>
+          <li>Collaborated with healthcare professionals on diagnosis and care</li>
+        </ul>
+      </li>
+      <li><strong>Study Coordinator</strong>, Diets & Lipid Profile Study (July 2024–Feb 2025)
+        <ul>
+          <li>Recruited and tracked participants</li>
+          <li>Managed dietary surveys and ethical compliance</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Work Experience</h2>
+    <ul>
+      <li><strong>Teaching Assistant</strong>, Daycare (Aug 2018–Jan 2021)
+        <ul>
+          <li>Assisted in classroom lessons and supervised children</li>
+          <li>Supported teachers with lesson plans and child safety</li>
+        </ul>
+      </li>
+      <li><strong>Script Marker</strong>, WAEC (Sept 2019)
+        <ul>
+          <li>Evaluated exam scripts with accuracy and fairness</li>
+          <li>Maintained integrity in grading standards</li>
+        </ul>
+      </li>
+      <li><strong>Freelance Writer</strong>, Health & Nutrition Topics (Jan 2025 – present)
+        <ul>
+          <li>Wrote well-researched articles on health and nutrition topics</li>
+          <li>Delivered content on time, meeting tight deadlines</li>
+          <li>Produced professional, academic, and engaging writeups</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Skills & Interests</h2>
+    <ul>
+      <li>Fluent in English</li>
+      <li>Proficient in Microsoft Office, PowerPoint</li>
+      <li>Intermediate skills in SPSS</li>
+    </ul>
+  </div>
+
+</body>
+</html>
+
+  
 
 
