--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="socials">
         <a href="mailto:ifeoluwanimibolarinwa@gmail.com">📧 Email</a>
         <a href="tel:+2348081934293">📞 Call</a>
-        <a href="https://www.linkedin.com/in/www.linkedin.com/in/ifeoluwanimi-bolarinwa" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/in/ifeoluwanimi-bolarinwa" target="_blank">🔗 LinkedIn</a>
         <a href="https://github.com/Nimi-27" target="_blank">🐙 GitHub</a>
       </div>
     </div>
