Initial portfolio page with full content and design

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h2>Education</h2>
     <ul>
       <li><strong>University of Ibadan, Nigeria (Feb 2025)</strong><br>
-        B.Sc. Human Nutrition and Dietetics — GPA: 3.02<br>
+        B.Sc. Human Nutrition and Dietetics<br>
         <em>Relevant Courses:</em> English, Biochemistry, Nutrition, Anatomy & Physiology
       </li>
       <li><strong>Advanced Breed Comprehensive College, Sagamu, Ogun State (June 2018)</strong><br>
